--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "main": "",
   "description": "",
+  "author": "Amir Elemam",
+  "license": "MIT",
+  "keywords": [],
   "scripts": {
     "test": "mocha __tests__/**/*.test.js"
   },
-  "keywords": [],
-  "author": "Amir Elemam",
-  "license": "MIT",
   "dependencies": {
-    "chai": "^4.2.0",
-    "lolex": "^4.1.0",
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "lolex": "^4.2.0"
   }
 }
