--- a/package.json
+++ b/package.json
@@ -7,13 +7,26 @@
   "license": "MIT",
   "keywords": [],
   "scripts": {
-    "test": "mocha __tests__/**/*.test.js"
+    "prestart": "npm run build",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon src/index.js --exec babel-node",
+    "build": "babel src --out-dir dist",
+    "pretest": "npm run build",
+    "test": "jest --testPathPattern=src --detectOpenHandles --watchAll --coverageReporters=html"
   },
   "dependencies": {
     "moment": "^2.24.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "lolex": "^4.2.0"
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "jest": "^25.1.0",
+    "lolex": "^5.1.2"
   }
 }
